# IPASS_NFC_Device

./: .gitmodules  CMakeLists.txt  DebouncedPin.cpp  DebouncedPin.h  main.cpp
lib/: CMakeLists.txt
lib/PNHelpers/: CMakeLists.txt
lib/PNHelpers/include/PNHelpers/: PNHelpers.h
tests/: CMakeLists.txt
tests/CardEmulator/: CMakeLists.txt  main.cpp
tests/ChipInfoTest/: CMakeLists.txt  main.cpp
tests/MifareUUIDScanner/: CMakeLists.txt  main.cpp
